fix: prevent wrapping in code-blocks

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -157,6 +157,7 @@ docs-content {
     padding: 0;
     margin: 0;
     line-height: 1.5;
+    white-space: pre;
   }
 
   a,
